--- a/themes/flex-block/_config.yml
+++ b/themes/flex-block/_config.yml
@@ -13,7 +13,7 @@ notice: flex-block主题部分重构，详情查看https://github.com/miiiku/fle
 # 作者信息
 author:
   name: 月がとてもきれいです
-  avatar: ././source/image/aponia.jpg
+  avatar: ./aponia.jpg
   description: 贵在坚持
 
 toc:
