--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,1 +1,1 @@
-{ "name" : "", "link" : "", "description" : "", "avatar" : "" }
+{ "name" : "Yixin", "link" : "blog.yixinfangfa.top", "description" : "frist", "avatar" : "" }
