--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 纯爱天下第一！
 subtitle: ''
-description: '二次元宅男，试图加入mhy，努力学技术ing'
+description: 你究竟是害怕剑姬，还是害怕那个满身破绽的自己
 keywords:
 author: 月がとてもきれいです
 language: en
