--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,1 +1,1 @@
-{ "name" : "Yixin", "link" : "blog.yixinfangfa.top", "description" : "frist", "avatar" : "" }
+- { "name" : "yixin", "link" : "https://blog.yixinfangfa.top/", "description" : "", "avatar" : "" }
