--- a/themes/flex-block/_config.yml
+++ b/themes/flex-block/_config.yml
@@ -13,8 +13,8 @@ notice: flex-block主题部分重构，详情查看https://github.com/miiiku/fle
 # 作者信息
 author:
   name: 月がとてもきれいです
-  avatar: https://qiansen.oss-cn-hangzhou.aliyuncs.com/aponia.jpg
-  description: 贵在坚持
+  avatar: https://qiansen.oss-cn-hangzhou.aliyuncs.com/1 (1).png
+  description: 你究竟是害怕剑姬，还是害怕那个满身破绽的自己
 
 toc:
   max_depth: 3 # 生成 TOC 的最大深度
