--- a/themes/flex-block/_config.yml
+++ b/themes/flex-block/_config.yml
@@ -21,15 +21,15 @@ toc:
   min_depth: 2 # 生成 TOC 的最小深度
 
 comments:
-  enable: false
+  enable: true
   use: 'valine' # valine || disqus
   # valine 评论
   # docs: https://valine.js.org
   # You can get your appid and appkey from https://leancloud.cn
   # 这里appId和appKey一定一定要改成自己的，没有的话去https://leancloud.cn这个网站注册创建一个
   valine:
-    appId: 
-    appKey: 
+    appId: MHuw3gALdvYlg26FbqEOavKe-gzGzoHsz
+    appKey: Rsfek8ixwLJeNQEkeyBVqsPt
     avatar: mm
     placeholder: 随便说点什么叭～
     notify: true
