--- a/themes/flex-block/_config.yml
+++ b/themes/flex-block/_config.yml
@@ -14,7 +14,7 @@ notice: flex-block主题部分重构，详情查看https://github.com/miiiku/fle
 # 作者信息
 author:
   name: 月がとてもきれいです
-  avatar: https://qiansen.oss-cn-hangzhou.aliyuncs.com/1 (1).png
+  avatar: https://qiansen.oss-cn-hangzhou.aliyuncs.com/加藤惠.jpg
   description: 你究竟是害怕剑姬，还是害怕那个满身破绽的自己
 
 toc:
