--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,1 +1,2 @@
 - { "name" : "yixin", "link" : "https://blog.yixinfangfa.top/", "description" : "", "avatar" : "" }
+- { "name" : "GiriNeko的猫窝", "link" : " https://ineko.cc/", "description" : "一头会说话的咸鱼", "avatar" : "https://static.ineko.cc/images/favicon.png" }
