--- a/themes/flex-block/_config.yml
+++ b/themes/flex-block/_config.yml
@@ -6,7 +6,7 @@ menu:
   关于: /about
 
 # 主页banner图
-banner: https://qiniu.sukoshi.xyz/src/images/68686407_p0.jpg
+banner: https://qiansen.oss-cn-hangzhou.aliyuncs.com/妮露.png
 
 # 站点通知信息
 notice: flex-block主题部分重构，详情查看https://github.com/miiiku/flex-block
