--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 纯爱天下第一！
+title: Crush！
 subtitle: ''
-description: 你究竟是害怕剑姬，还是害怕那个满身破绽的自己
+description: 每天都在想念
 keywords:
-author: 月がとてもきれいです
+author: Jh
 language: en
 timezone: ''
 
