--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Crush！
+title: 欢迎来到芜湖马酱的空间
 subtitle: ''
 description: 每天都在想念
 keywords:
