--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,8 @@ theme: flex-block
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
