--- a/themes/hexo-theme-fluid-1.9.5/_config.yml
+++ b/themes/hexo-theme-fluid-1.9.5/_config.yml
@@ -456,7 +456,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: 
+  banner_img: /img/1.png
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -475,7 +475,7 @@ index:
 
     # 为空则按 hexo config.subtitle 显示
     # If empty, text based on `subtitle` in hexo config
-    text: "An elegant Material-Design theme for Hexo"
+    text: "欢迎来到芜湖马酱的空间"
 
     # 通过 API 接口作为首页副标题的内容，必须返回的是 JSON 格式，如果请求失败则按 text 字段显示，该功能必须先开启 typing 打字机功能
     # Subtitle of the homepage through the API, must be returned a JSON. If the request fails, it will be displayed in `text` value. This feature must first enable the typing animation
@@ -528,13 +528,13 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: 
+  banner_img: /img/1.png
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
   # 文章在首页的默认封面图，当没有指定 index_img 时会使用该图片，若两者都为空则不显示任何图片
   # Path of the default post cover when `index_img` is not set. If both are empty, no image will be displayed
-  default_index_img: 
+  default_index_img: /img/1.png
 
   # 文章标题下方的元信息
   # Meta information below title
