--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 欢迎来到芜湖马酱的空间
+title: 
 subtitle: ''
-description: 每天都在想念
+description: 
 keywords:
 author: Jh
 language: zh-CN ##en
