--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -456,7 +456,7 @@ footer:
 index:
   # 首页 Banner 头图，可以是相对路径或绝对路径，以下相同
   # Path of Banner image, can be a relative path or an absolute path, the same on other pages
-  banner_img: /img/1.png
+  banner_img: https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E4%BA%95%E4%B8%8A%E5%B0%9A%E5%BC%A53.jpg
 
   # 头图高度，屏幕百分比
   # Height ratio of banner image
@@ -528,13 +528,13 @@ index:
 # Post Page
 #---------------------------
 post:
-  banner_img: /img/1.png
+  banner_img: 
   banner_img_height: 70
   banner_mask_alpha: 0.3
 
   # 文章在首页的默认封面图，当没有指定 index_img 时会使用该图片，若两者都为空则不显示任何图片
   # Path of the default post cover when `index_img` is not set. If both are empty, no image will be displayed
-  default_index_img: /img/1.png
+  default_index_img: 
 
   # 文章标题下方的元信息
   # Meta information below title
@@ -948,12 +948,12 @@ tag:
 #---------------------------
 about:
   enable: true
-  banner_img: /img/default.png
+  banner_img: https://boke-file2.oss-cn-hangzhou.aliyuncs.com/%E4%BA%95%E4%B8%8A%E5%B0%9A%E5%BC%A52.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   avatar: /img/avatar.png
-  name: "Fluid"
-  intro: "An elegant theme for Hexo"
+  name: "芜湖马酱"
+  intro: "你好 我是芜湖马酱欢迎来到我的主页"
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
   icons:
